home page improved

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="index.html"><img src="images/cms-logo.png" alt="Community Science Museum logo" /></a>
         </figure>
         <div class="header-content-wrapper">
-          <div class="header-time-wrapper">
+          <div class="time-wrapper">
             <span class="fa fa-clock" id="header-time-icon"></span>
             <p id="header-time-text">Open today 10:00 — 16:00</p>
           </div>
@@ -104,27 +104,28 @@
     <main>
       <div class="hero-container">
         <div class="hero-content">
-          <h1>EXPLORE <em>more than 1000</em> EXHIBITIONS</h1>
+          <hgroup>
+            <h1 class="hero-heading">WELCOME to the Science Museum!</h1>
+            <h2 class="hero-sub-heading">The place where science comes to life</h2>
+          </hgroup>
           <a href="https://www.ticketmaster.com/" class="button hero-button">
-            Exhibitions
+            About us
           </a>
         </div>
-        <a href="about_us.html">
+        <a href="explore.html">
           <div class="speech-bubble">
             <div class="speech-bubble-arrow"></div>
-            <h3 class="speech-bubble-caption">Hi, my name is Pepper</h3>
-            <!-- <h3 class="speech-bubble-caption">Let us explore together</h3> -->
-            <p>Learn more <em>about us</em> and our <em>vision</em></p>
-            <span class="fa fa-arrow-circle-right"></span>
+            <span class="speech-bubble-caption">Hi, my name is <strong>Pepper</strong>,</span>
+            <span>come let us explore <em>together</em></span>
+            <span class="fa fa-arrow-circle-right speech-bubble-icon"></span>
           </div>
         </a>
       </div>
 
-      <!-- <div class="fading-background_2"></div> -->
-      <div class="categories-container">
-        <section class="categories-section">
+      <section class="categories-section">
+        <h3 class="categories-heading">EXPLORE <em>more than 1000</em> EXHIBITIONS</h3>
+        <div class="categories-wrapper">
           <div class="category-box" id="cosmology">
-
             <a href="exhibitions.html#cosmology-anchor">
               <div class="category-box-content">
                 <figure class="category-planet-icon">
@@ -176,21 +177,20 @@
               </div>
             </a>
           </div>
-        </section>
-        <section class="info-section">
-          <div class="clock">
+        </div>
+        <div class="info-container">
+          <div class="time-wrapper">
             <span class="fa fa-clock"></span>
-            <p>OPEN TODAY: 10:00 — 16:00</p>
+            <span class="info-heading">OPEN TODAY 10:00 — 16:00</span>
           </div>
-          <div class="ticketmaster">
-            <p id="tour">Guided Tour 250 NOK per Person</p>
-            <p id="tickets">Online Tickets Provided by:</p>
-            <figure id="ticketmaster-logo">
-              <img src="images\icons\Ticketmaster-Logo-White.svg" alt="Ticketmaster logo" />
-            </figure>
-          </div>
-        </section>
-      </div>
+          <ul class="info-list">
+            <li>Entrance tickets only 100 NOK/person</li>
+            <li>Guided tours 150 NOK/person</li>
+          </ul>
+        </div>
+      </section>
+
+
 
       <div class="main-wrapper">
         <div class="content-container">
