clubs section improved

--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
         <div class="content-container">
           <section class="news-section">
             <div id="news-anchor"></div>
-            <h2 id="special-event" class="main-heading">NEWS: Special Events & Exhibitions</h2>
-
+            <h2 id="special-event" class="main-heading">News & special events</h2>
             <div class="container">
               <div class="carousel">
                 <div class="slider">
@@ -208,7 +207,7 @@
                     </figure>
                     <div class="news">
                       <div>
-                        <h5>Night in the Museum</h5>
+                        <h5 class="news-heading">Night in the Museum</h5>
                         <p>
                           Get your family together for an exciting night in the
                           museum as you sleep over beside dinosaurs and science
@@ -230,7 +229,7 @@
 
                     <div class="news">
                       <div>
-                        <h5>Visiting Professor Of Aeronautics</h5>
+                        <h5 class="news-heading">Visiting Professor Of Aeronautics</h5>
                         <p>
                           It is our pleasure to announce that Professor Sheila
                           Widnall from the Massachusetts Institute of Technology
@@ -252,7 +251,7 @@
                     </figure>
                     <div class="news">
                       <div>
-                        <h5>Energica Exhibition</h5>
+                        <h5 class="news-heading">Energica Exhibition</h5>
                         <p>
                           On loan from the NEMO Science Museum in Amsterdam, the
                           Energetica exhibition is coming to the Community Science
@@ -286,8 +285,8 @@
             </div>
           </section>
           <section class="clubs-section">
-            <h3 id="clubs" class="main-heading">Join One of Our Children Clubs</h3>
-            <div class="image-wrapper">
+            <h3 id="clubs" class="main-heading">Join one of our children clubs</h3>
+            <div class="clubs-wrapper">
               <figure class="clubs">
                 <a href="explore.html#club-anchor"><img src="images\club_1.jpg"
                     alt="A group of five children aged 8-9 is watching a chemistry experiment involving expanding blue scum, with great excitement." />
