--- a/index.html
+++ b/index.html
@@ -307,19 +307,17 @@
         <div class="newsletter-wrapper">
           <div class="blur">
             <section class="newsletter-section">
-              <p for="newsletter">
+              <label class="newsletter-label" for="newsletter">
                 Sign up to our <em>newsletter</em> and be the first to know about our
                 exciting <em>new stuff</em>:
-              </p>
+              </label>
               <div class="newsletter-success">
                 Welcome! Please check your inbox
               </div>
               <form class="newsletter-form">
-                <label for="newsletter-input">E-mail</label>
-                <div class="input-wrapper">
-                  <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
-                  <button id="sign-up-button" type="submit" name="subscribe" value="SIGN UP">Sign up</button>
-                </div>
+                <!-- <label for="newsletter-input">E-mail</label> -->
+                <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
+                <button id="sign-up-button" type="submit" name="subscribe">Sign up</button>
               </form>
               <p id="newsletter-error" class="error-message">
                 Please enter a valid e-mail address
