slider further improved

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
           <section class="news-section">
             <!-- <div id="news-anchor"></div> -->
             <h2 id="special-event" class="main-heading">News & special events</h2>
-            <div class="wrapper">
-              <div class="container">
-                <div class="carousel">
+            <div class="slider-wrapper">
+              <div class="slider-outer-container">
+                <div class="slider-inner-container">
                   <div class="slider">
 
                     <div class="slide">
@@ -264,14 +264,14 @@
                     </div>
                   </div>
                 </div>
-                <div id="left" class="controls">
+                <div id="left" class="slider-controls">
                   <i id="arrow-left" class="fas fa-chevron-left"></i>
                 </div>
-                <div id="right" class="controls">
+                <div id="right" class="slider-controls">
                   <i id="arrow-right" class="fas fa-chevron-right"></i>
                 </div>
               </div>
-              <div class="preview">
+              <div class="slider-preview">
                 <img id="preview1" class="preview-image selected" src="images\t-rex.jpg" alt="" />
                 <img id="preview2" class="preview-image" src="images\aeronautic.jpg" alt="" />
                 <img id="preview3" class="preview-image" src="images\energica.jpg" alt="" />
